tests/paczka1/small_fuzzy/76728417.err
Error in line 2: mVhCXdc S970 99,9
Error in line 1: S26 A407 96,2
Error in line 5: S26 S970 56,2
Error in line 10: empKL A624 -5,9
Error in line 7: S26 A407 11,6
